--- a/Algorithm_V1/000-GetData.ipynb
+++ b/Algorithm_V1/000-GetData.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "2da82216",
    "metadata": {},
    "outputs": [
@@ -21,13 +21,13 @@
      "output_type": "stream",
      "text": [
       "DataFrame 1:\n",
-      "(158530, 13)\n",
+      "(157489, 13)\n",
       "\n",
       "DataFrame 2:\n",
-      "(10813, 22)\n",
+      "(10807, 22)\n",
       "\n",
       "DataFrame 3:\n",
-      "(69, 4)\n",
+      "(70, 4)\n",
       "Saving file to disk ...\n"
      ]
     }
@@ -38,17 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4a85d27b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(342908, 57)"
+       "(342980, 57)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,54 +60,186 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "a9278708",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "167 days 22:48:25.791378\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>ContactName</th>\n",
+       "      <th>BusinessName</th>\n",
+       "      <th>CustomerModeName</th>\n",
+       "      <th>CustomerRef</th>\n",
+       "      <th>ContactPhone</th>\n",
+       "      <th>CustomerType</th>\n",
+       "      <th>CustomerCreatedDate</th>\n",
+       "      <th>AgentID</th>\n",
+       "      <th>AgentName</th>\n",
+       "      <th>...</th>\n",
+       "      <th>LastImageUpdatedDate</th>\n",
+       "      <th>LastImageAgentID</th>\n",
+       "      <th>ImageCaptured</th>\n",
+       "      <th>LatestUpdateDate</th>\n",
+       "      <th>KYC_Capture_Status</th>\n",
+       "      <th>hasPOS</th>\n",
+       "      <th>hasVAS</th>\n",
+       "      <th>hasBNPL</th>\n",
+       "      <th>lastDelvDate</th>\n",
+       "      <th>isActive</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>226549</th>\n",
+       "      <td>4529739</td>\n",
+       "      <td>Joy Stanley</td>\n",
+       "      <td>Madam joy stores</td>\n",
+       "      <td>Retailer</td>\n",
+       "      <td>iflajz9fa</td>\n",
+       "      <td>07039316086</td>\n",
+       "      <td>Lead</td>\n",
+       "      <td>May 12 2021</td>\n",
+       "      <td>5260570.0</td>\n",
+       "      <td>Ezekiel Vivian Chinyere</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2025-06-03 12:52:22.217</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2025-06-03 12:52:22.217</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2025-01-10 09:25:31.897</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 57 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "pandas.core.frame.DataFrame"
+       "        CustomerID  ContactName       BusinessName CustomerModeName  \\\n",
+       "226549     4529739  Joy Stanley  Madam joy stores          Retailer   \n",
+       "\n",
+       "       CustomerRef ContactPhone CustomerType CustomerCreatedDate    AgentID  \\\n",
+       "226549   iflajz9fa  07039316086         Lead         May 12 2021  5260570.0   \n",
+       "\n",
+       "                      AgentName  ...    LastImageUpdatedDate LastImageAgentID  \\\n",
+       "226549  Ezekiel Vivian Chinyere  ... 2025-06-03 12:52:22.217              0.0   \n",
+       "\n",
+       "       ImageCaptured        LatestUpdateDate KYC_Capture_Status hasPOS hasVAS  \\\n",
+       "226549           1.0 2025-06-03 12:52:22.217                  2      0      0   \n",
+       "\n",
+       "       hasBNPL            lastDelvDate isActive  \n",
+       "226549       0 2025-01-10 09:25:31.897        1  \n",
+       "\n",
+       "[1 rows x 57 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(df_kyc_customer)"
+    "\n",
+    "df_min = df_kyc_customer.query('CustomerID == 4529739')#.head(1)\n",
+    "\n",
+    "from datetime import datetime\n",
+    "import pandas as pd\n",
+    "\n",
+    "print(datetime.now() - pd.to_datetime(df_min['lastDelvDate'].values[0]))\n",
+    "df_min"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "8bddd60c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(27795, 15)"
+       "(27821, 15)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_customer_score = get_customer_score() # ETA: 40 mins\n",
+    "\n",
+    "df_customer_days_since_last_order = df_customer_score.groupby('CustomerID').days_since_last_order.min().reset_index()\n",
+    "\n",
+    "# Update df_customer_score with df_customer_days_since_last_order\n",
+    "df_customer_score.drop(columns=['days_since_last_order'], inplace=True, errors='ignore')\n",
+    "df_customer_score = df_customer_score.merge(df_customer_days_since_last_order, on='CustomerID', suffixes=('', '_min'))\n",
+    "\n",
     "df_customer_score.shape "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3324ed3e",
+   "id": "e4322168",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "3324ed3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(168)"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df_min = df_customer_score.query('CustomerID == 4529739')#.head(1)\n",
+    "\n",
+    "df_min.days_since_last_order.max()"
+   ]
   }
  ],
  "metadata": {
