--- a/Algorithm_V1/000-GetData.ipynb
+++ b/Algorithm_V1/000-GetData.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "2da82216",
    "metadata": {},
    "outputs": [
@@ -21,13 +21,13 @@
      "output_type": "stream",
      "text": [
       "DataFrame 1:\n",
-      "(157489, 13)\n",
+      "(156554, 13)\n",
       "\n",
       "DataFrame 2:\n",
-      "(10807, 22)\n",
+      "(10797, 22)\n",
       "\n",
       "DataFrame 3:\n",
-      "(70, 4)\n",
+      "(72, 4)\n",
       "Saving file to disk ...\n"
      ]
     }
@@ -38,17 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4a85d27b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(342980, 57)"
+       "(343028, 57)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "a9278708",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "167 days 22:48:25.791378\n"
+      "168 days 23:15:41.343279\n"
      ]
     },
     {
@@ -117,14 +117,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>226549</th>\n",
+       "      <th>185301</th>\n",
        "      <td>4529739</td>\n",
        "      <td>Joy Stanley</td>\n",
        "      <td>Madam joy stores</td>\n",
        "      <td>Retailer</td>\n",
        "      <td>iflajz9fa</td>\n",
        "      <td>07039316086</td>\n",
-       "      <td>Lead</td>\n",
+       "      <td>Customer</td>\n",
        "      <td>May 12 2021</td>\n",
        "      <td>5260570.0</td>\n",
        "      <td>Ezekiel Vivian Chinyere</td>\n",
@@ -147,24 +147,24 @@
       ],
       "text/plain": [
        "        CustomerID  ContactName       BusinessName CustomerModeName  \\\n",
-       "226549     4529739  Joy Stanley  Madam joy stores          Retailer   \n",
+       "185301     4529739  Joy Stanley  Madam joy stores          Retailer   \n",
        "\n",
        "       CustomerRef ContactPhone CustomerType CustomerCreatedDate    AgentID  \\\n",
-       "226549   iflajz9fa  07039316086         Lead         May 12 2021  5260570.0   \n",
+       "185301   iflajz9fa  07039316086     Customer         May 12 2021  5260570.0   \n",
        "\n",
        "                      AgentName  ...    LastImageUpdatedDate LastImageAgentID  \\\n",
-       "226549  Ezekiel Vivian Chinyere  ... 2025-06-03 12:52:22.217              0.0   \n",
+       "185301  Ezekiel Vivian Chinyere  ... 2025-06-03 12:52:22.217              0.0   \n",
        "\n",
        "       ImageCaptured        LatestUpdateDate KYC_Capture_Status hasPOS hasVAS  \\\n",
-       "226549           1.0 2025-06-03 12:52:22.217                  2      0      0   \n",
+       "185301           1.0 2025-06-03 12:52:22.217                  2      0      0   \n",
        "\n",
        "       hasBNPL            lastDelvDate isActive  \n",
-       "226549       0 2025-01-10 09:25:31.897        1  \n",
+       "185301       0 2025-01-10 09:25:31.897        1  \n",
        "\n",
        "[1 rows x 57 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,17 +182,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "id": "8bddd60c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(27821, 15)"
+       "(27789, 15)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,17 +219,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "3324ed3e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "np.int64(168)"
+       "np.int64(169)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
