--- a/StockPoint_Clustering_and_Routing/__dev_sandbox.ipynb
+++ b/StockPoint_Clustering_and_Routing/__dev_sandbox.ipynb
@@ -23,39 +23,326 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "d0ea0c37",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import pyodbc  # or sqlalchemy, depending on your setup\n",
+    "from codebase.database.get_connection import get_connection_string, get_connection\n",
+    "from codebase.utils.utils import setup_logging \n",
+    "import warnings\n",
     "# from jinja2 import Template"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "id": "55124e61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logger = setup_logging(log_dir='log-sandbox-sp-clustering-and-routing', projname='log-sandbox-sp-clustering-and-routing')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "2ca5539b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get Connection\n",
-    "# conn = \n",
-    "  \n",
-    "\n",
-    "# Read the SQL script from file\n",
-    "with open(\"_sql/sp_dim.sql\", 'r') as file:\n",
-    "    sql_query = file.read()\n",
-    " \n",
-    "# Run query and load into DataFrame\n",
-    "df = pd.read_sql(sql_query, conn)"
+    "repl_con_string = get_connection_string(logger = logger, database='VconnectMasterDWR', server_type='replica') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f3322c28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c00ecea7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Stock Point Dim: Stock_Point_ID\tStock_point_Name\tLattitude\tLongitude\n",
+    "try:\n",
+    "    with pyodbc.connect(repl_con_string) as conn:\n",
+    "        warnings.simplefilter(\"ignore\", UserWarning) \n",
+    "        with open(\"_sql/sp_dim.sql\", 'r') as file:\n",
+    "            sql_query = file.read()\n",
+    "        df_sp_dim = pd.read_sql(sql_query, con = conn) \n",
+    "    \n",
+    "    if not df_sp_dim.empty:\n",
+    "        df_sp_dim.to_feather('./input/df_sp_dim.feather')\n",
+    "except Exception as e:\n",
+    "    logger.error(f'Error fetch stock_point_dim:\\n{e}')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "50b1ab21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Stock Point Dim: Stock_Point_ID\tStock_point_Name\tLattitude\tLongitude\n",
+    "try:\n",
+    "    with pyodbc.connect(repl_con_string) as conn:\n",
+    "        warnings.simplefilter(\"ignore\", UserWarning) \n",
+    "        with open(\"_sql/sp_location_map.sql\", 'r') as file:\n",
+    "            sql_query = file.read()\n",
+    "        df_sp_location_mapping= pd.read_sql(sql_query, con = conn) \n",
+    "    \n",
+    "    if not df_sp_location_mapping.empty:\n",
+    "        df_sp_location_mapping.to_feather('./input/df_sp_location_mapping.feather')\n",
+    "except Exception as e:\n",
+    "    logger.error(f'Error fetch stock point location mapping:\\n{e}')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "a1f3bf2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FCID</th>\n",
+       "      <th>StockPointName</th>\n",
+       "      <th>StateName</th>\n",
+       "      <th>State_ID</th>\n",
+       "      <th>Region</th>\n",
+       "      <th>LGA</th>\n",
+       "      <th>LGA_ID</th>\n",
+       "      <th>LCDA</th>\n",
+       "      <th>LCDA_ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1645887</td>\n",
+       "      <td>Surulere FC</td>\n",
+       "      <td>Lagos</td>\n",
+       "      <td>125</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Self Pick Lagos</td>\n",
+       "      <td>5845</td>\n",
+       "      <td>Self Pick Surulere</td>\n",
+       "      <td>46431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1646038</td>\n",
+       "      <td>Kaduna FC</td>\n",
+       "      <td>Kaduna</td>\n",
+       "      <td>119</td>\n",
+       "      <td>NC3</td>\n",
+       "      <td>Kaduna North</td>\n",
+       "      <td>1358</td>\n",
+       "      <td>Abakpa Abakpa</td>\n",
+       "      <td>65152</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1646038</td>\n",
+       "      <td>Kaduna FC</td>\n",
+       "      <td>Kaduna</td>\n",
+       "      <td>119</td>\n",
+       "      <td>NC3</td>\n",
+       "      <td>Kaduna North</td>\n",
+       "      <td>1358</td>\n",
+       "      <td>Babban Saura Babban Saura</td>\n",
+       "      <td>65153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1646038</td>\n",
+       "      <td>Kaduna FC</td>\n",
+       "      <td>Kaduna</td>\n",
+       "      <td>119</td>\n",
+       "      <td>NC3</td>\n",
+       "      <td>Kaduna North</td>\n",
+       "      <td>1358</td>\n",
+       "      <td>Badiko Badiko</td>\n",
+       "      <td>65154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1646038</td>\n",
+       "      <td>Kaduna FC</td>\n",
+       "      <td>Kaduna</td>\n",
+       "      <td>119</td>\n",
+       "      <td>NC3</td>\n",
+       "      <td>Kaduna North</td>\n",
+       "      <td>1358</td>\n",
+       "      <td>Barden Yana Barden Yana</td>\n",
+       "      <td>65155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11116</th>\n",
+       "      <td>1647442</td>\n",
+       "      <td>OmniHub Ikom Cross River - 910 Side Hustle</td>\n",
+       "      <td>Cross River</td>\n",
+       "      <td>110</td>\n",
+       "      <td>SS2</td>\n",
+       "      <td>Ikom</td>\n",
+       "      <td>1186</td>\n",
+       "      <td>Union Bank</td>\n",
+       "      <td>9415</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11117</th>\n",
+       "      <td>1647442</td>\n",
+       "      <td>OmniHub Ikom Cross River - 910 Side Hustle</td>\n",
+       "      <td>Cross River</td>\n",
+       "      <td>110</td>\n",
+       "      <td>SS2</td>\n",
+       "      <td>Ikom</td>\n",
+       "      <td>1186</td>\n",
+       "      <td>Uyo Street.</td>\n",
+       "      <td>9416</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11118</th>\n",
+       "      <td>1647442</td>\n",
+       "      <td>OmniHub Ikom Cross River - 910 Side Hustle</td>\n",
+       "      <td>Cross River</td>\n",
+       "      <td>110</td>\n",
+       "      <td>SS2</td>\n",
+       "      <td>Ikom</td>\n",
+       "      <td>1186</td>\n",
+       "      <td>W E P C O</td>\n",
+       "      <td>9417</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11119</th>\n",
+       "      <td>1647442</td>\n",
+       "      <td>OmniHub Ikom Cross River - 910 Side Hustle</td>\n",
+       "      <td>Cross River</td>\n",
+       "      <td>110</td>\n",
+       "      <td>SS2</td>\n",
+       "      <td>Ikom</td>\n",
+       "      <td>1186</td>\n",
+       "      <td>Water Boaroad</td>\n",
+       "      <td>9418</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11120</th>\n",
+       "      <td>1647442</td>\n",
+       "      <td>OmniHub Ikom Cross River - 910 Side Hustle</td>\n",
+       "      <td>Cross River</td>\n",
+       "      <td>110</td>\n",
+       "      <td>SS2</td>\n",
+       "      <td>Ikom</td>\n",
+       "      <td>1186</td>\n",
+       "      <td>Yala Street.</td>\n",
+       "      <td>9419</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>11121 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          FCID                              StockPointName    StateName  \\\n",
+       "0      1645887                                 Surulere FC        Lagos   \n",
+       "1      1646038                                   Kaduna FC       Kaduna   \n",
+       "2      1646038                                   Kaduna FC       Kaduna   \n",
+       "3      1646038                                   Kaduna FC       Kaduna   \n",
+       "4      1646038                                   Kaduna FC       Kaduna   \n",
+       "...        ...                                         ...          ...   \n",
+       "11116  1647442  OmniHub Ikom Cross River - 910 Side Hustle  Cross River   \n",
+       "11117  1647442  OmniHub Ikom Cross River - 910 Side Hustle  Cross River   \n",
+       "11118  1647442  OmniHub Ikom Cross River - 910 Side Hustle  Cross River   \n",
+       "11119  1647442  OmniHub Ikom Cross River - 910 Side Hustle  Cross River   \n",
+       "11120  1647442  OmniHub Ikom Cross River - 910 Side Hustle  Cross River   \n",
+       "\n",
+       "       State_ID Region              LGA  LGA_ID                       LCDA  \\\n",
+       "0           125   None  Self Pick Lagos    5845         Self Pick Surulere   \n",
+       "1           119    NC3     Kaduna North    1358              Abakpa Abakpa   \n",
+       "2           119    NC3     Kaduna North    1358  Babban Saura Babban Saura   \n",
+       "3           119    NC3     Kaduna North    1358              Badiko Badiko   \n",
+       "4           119    NC3     Kaduna North    1358    Barden Yana Barden Yana   \n",
+       "...         ...    ...              ...     ...                        ...   \n",
+       "11116       110    SS2             Ikom    1186                 Union Bank   \n",
+       "11117       110    SS2             Ikom    1186                Uyo Street.   \n",
+       "11118       110    SS2             Ikom    1186                  W E P C O   \n",
+       "11119       110    SS2             Ikom    1186              Water Boaroad   \n",
+       "11120       110    SS2             Ikom    1186               Yala Street.   \n",
+       "\n",
+       "       LCDA_ID  \n",
+       "0        46431  \n",
+       "1        65152  \n",
+       "2        65153  \n",
+       "3        65154  \n",
+       "4        65155  \n",
+       "...        ...  \n",
+       "11116     9415  \n",
+       "11117     9416  \n",
+       "11118     9417  \n",
+       "11119     9418  \n",
+       "11120     9419  \n",
+       "\n",
+       "[11121 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sp_location_mapping"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -69,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
